# fhir-mcp-server

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  EXAMPLES.md  LICENSE  Makefile  README.md  claude_desktop_config.json  demo.cast  flake.nix  pyproject.toml
.github/workflows/: ci.yml  synthea-smoke.yml
src/fhir_mcp_server/: __main__.py  fhir_client.py  formatters.py  interactions.py  loinc_codes.py  models.py  server.py
tests/: conftest.py  test_fhir_client.py  test_formatters.py  test_instructions.py  test_interactions.py  test_json_output.py  test_loinc_codes.py  test_server_tools.py
tests_synthea/: conftest.py  test_smoke.py
