[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-mcp-server"
version = "0.1.0"
description = "An MCP server for querying FHIR R4 healthcare data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
fhir-mcp-server = "fhir_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
