[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-mcp-server"
version = "1.0.0"
description = "A MCP server for querying FHIR R4 healthcare data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Pure-Python test tooling — installs cleanly via pip on every platform,
# including NixOS.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]
# Ruff is a compiled binary. Its pip wheel is dynamically linked and will NOT
# run on NixOS (use the Nix-provided ruff via `nix develop` there). Kept as a
# separate extra so CI and non-Nix machines can still `pip install .[dev,lint]`.
lint = [
    "ruff>=0.6.0",
]

[project.scripts]
fhir-mcp-server = "fhir_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
